apps/prod/homepage/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homepage
    app.kubernetes.io/name: homepage
  name: homepage
  namespace: homepage
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.40.183
  ports:
  - name: homepage
    port: 3000
    targetPort: 3000
  selector:
    app.kubernetes.io/name: homepage
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homepage
  namespace: homepage
subsets:
- addresses:
  - ip: 192.168.40.183
  ports:
  - name: homepage
    port: 3000
