apps/prod/homepage/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:U7otqwe2pKYujJsMIt8WIGjWbdLvBBoELxD2AVCnU/c=,iv:hK2fVxQNFVwB2jZ2iRExm4T7nCuWcRU5rO5Q4/qKnEI=,tag:u6ak8yT3u8hEaqAhe537Mw==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:hRrcfLMJlZWU7xvRh5FLrmK4wRgsyF6mAYxVcEsTrvg=,iv:C1tF0/yGWQPlazgPXoW+eo7g8PRK5zx4rYyG9uteON8=,tag:AovEKZFAhzHyTLGTWUjzxw==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:tyCMDEX/o7qaxNdutLPMtZlwJnNhV2U=,iv:KOXnjAIXfwXpHFXAFblwiIWFB2PwZ5T2O7kv9dIAk84=,tag:aqgx+9m5pmjM/x9BE98ffQ==,type:str]
        ingress.kubernetes.io/ssl-passthrough: "true"
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: homepage-production
    namespace: homepage
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:fxv/b+2q0ScULTN77bCm0IfnnGv6d6YTZvsA40obPtqsjON24HaQGw==,iv:dhOjm9zNpWn1mAzmUXKz6PPk5u10NFWNVi2gfip98vA=,tag:QTHJqN1rKqfrqJfpo3HPiA==,type:str]
          middlewares:
            - name: redirect-to-https
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: homepage
              namespace: homepage
    tls:
        domains:
            - main: ENC[AES256_GCM,data:ip1+Gdee9LWcJ4/vpAir5ruNlLXZ5QM=,iv:jbvoTd6BnRbPdHexbkLxJZKSl4EZEJXTLKB+VjHVAS4=,tag:skvTVmJYbJzL6tuOBDBugQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:cjY/Cf5mjiQePJgmTy/Ry61OtYertoHB,iv:K7XH1zJIDb7poO9TDsRqrrpaXFyYAQNJnIJBxE9xEj0=,tag:LTe2oMLRUJKgqM8z867OfA==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: homepage-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2N0lkWFVYQk9TQkZhVmxD
[...]
            nAn01YlOc62wT7RP6YnsDRQ8RgXqsRk0iTNT4hAzS22Ru2pTGrt66w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-04T23:19:00Z"
    mac: ENC[AES256_GCM,data:/nWkHMl4ZpUxG1WtH8qyeuoGT7TYHYpZ83bVhmvK+CoUSb090XB/sW+YlNxL0+jBNsuf3RS0H+RX+GDsdHy1XqQ4lj5ZZ/o7ID7ARcTSuZECb05jMiQL8QdnbRWfrtnIuBnFSWy92XzlzWYT8JQKKVUO/DoPrPzqXpJ8vfN0zqM=,iv:L62VZFzuXknWINDlcvCnz8xGH7e0nbetamOW5w4nG+U=,tag:ccpB7ic4Xz8eUwhwUe6kiA==,type:str]
    pgp:
        - created_at: "2024-10-11T22:18:46Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAx7GDM0t/hRQ7s/uVKCtG7cF0TMumAE7VEeFrAsfujC5H
[...]
            =gxkI
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
