apps/prod/homepage/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:o3e0VFt8exux8elhkfuiqJsMzB95EpTtLXnpanYyHL4=,iv:Xw+Ux5XLTtz1BcDtox0F4NvJWyyV+NqrQNLSXoDaay4=,tag:ka+6/sdGMoHdg0XsABebVg==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:olnWBIIznzuv/15fvvD7ir2AbRMo7emYB+aQTeG/clY=,iv:dsh3T/jFuPsPI5KXqFeOTu3jHm3ZVwRglHPdOfK7pfk=,tag:ARfEePr6Vp6tI1tznUePsw==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:9g3AGtto8d+2NvcTCNFGLkPhN/VJ7HQ=,iv:/9WmXpF3X8C07NaGuTtVpxA4osSdUzPtWLxa/+d3lUk=,tag:DRS2N1a2cc8tnKjj5Mt2KA==,type:str]
        ingress.kubernetes.io/ssl-passthrough: "true"
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: homepage-staging
    namespace: homepage
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:ExpBZj1C1bC1Nw+6geYHeIhOPQpmqUl9BYwB0Rp1iWb5QinPIz2vLg==,iv:auTKF6ApRjClicJvjjFas5n5Th992JpTh4vqz0zx6kU=,tag:NK8JKXaga44B0nWUajSqqQ==,type:str]
          middlewares:
            - name: redirect-to-https
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: homepage
              namespace: homepage
    tls:
        domains:
            - main: ENC[AES256_GCM,data:Q7NVwjmcNMoaoRs0aQLFDO/U2rpqph4=,iv:kfHi4epoFRYe4/ihFk71CMyzfBTbHwNlIn1uvO0mlBk=,tag:iAF1DJineJqutvi7EbODBA==,type:str]
              sans:
                - ENC[AES256_GCM,data:ya+WTOAqE0yeNPdNZeIpZR43qVbGe6/X,iv:Anhhf4u+VypysULE81M531fMa9wqPiuZcDcwZTwX/wc=,tag:PFmt2OnTREmxNFdE+r9T0A==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: homepage-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhZXpHckNLVklUTG1UcmFl
[...]
            L6IqxUTNaOuGU9reLEHEhWeA0n3p0R4BjYr1xWPc+ZFatEg9H3btaQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-04T23:18:48Z"
    mac: ENC[AES256_GCM,data:hMfIhKjtFc13/hgoKbG3r2HCks/yH+vycABKqIDmfdXR8ImtEsW7+pLJdNm3VpT1oclLVaIXe59xDvAnw2VF+32RzikQXF0xlL2SnXQPbBDVwQTepdwoyy3uXdt33cXAwlcHmP3q4UpdhZD2rcM6i5o5CAE7bXgJdToNfkhR10M=,iv:iBKUSABx87key9axjthJIO636W2YgDrxWYNNwobiiic=,tag:7IMmnYa3Faipkb2sg12yCQ==,type:str]
    pgp:
        - created_at: "2024-10-11T22:18:41Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/6A2uzLhxo5pytwtbniGxzqvE5yeSn+ZqYAA1xTEbmEaGT
[...]
            =Ed+c
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
